--- a/css/home.css
+++ b/css/home.css
@@ -29,21 +29,21 @@ html, body { height: 100%; }
 
 .footer { clear: both; position: relative; height: 70px; }
 
-body { background-image: url('/img/body_bg.png?1416006965'); background-position: top center; background-repeat: no-repeat; }
+body { background-image: url('/img/body_bg.png?1391258070'); background-position: top center; background-repeat: no-repeat; }
 @media (max-width: 767px) { body { padding: 0; } }
 
-.header { height: 450px; background-image: url('/img/body_bg.png?1416006965'); background-position: top center; background-repeat: no-repeat; background-color: #393185; -webkit-box-shadow: rgba(0, 0, 0, 0.5) 0 5px 15px; -moz-box-shadow: rgba(0, 0, 0, 0.5) 0 5px 15px; box-shadow: rgba(0, 0, 0, 0.5) 0 5px 15px; margin-bottom: 45px; }
+.header { height: 450px; background-image: url('/img/body_bg.png?1391258070'); background-position: top center; background-repeat: no-repeat; background-color: #393185; -moz-box-shadow: rgba(0, 0, 0, 0.5) 0 5px 15px; -webkit-box-shadow: rgba(0, 0, 0, 0.5) 0 5px 15px; box-shadow: rgba(0, 0, 0, 0.5) 0 5px 15px; margin-bottom: 45px; }
 .header .navbar .country > li > a { padding: 12.5px 6px 12.5px; }
 .header .head { margin-top: 65px; }
 .header .head .logo { margin: 30px 0; }
 .header .head .contact-top { color: #fff; }
 .header .head .contact-top .tel { /* family: Impact,sans-serif; */ font-size: 24px; font-weight: normal; line-height: 40px; text-shadow: rgba(0, 0, 0, 0.2) 3px 3px 4px; }
 .header .head .contact-top .address { margin: 0 auto 20px; max-width: 220px; }
-.header .head .contact-top .email > a { color: #777777; font-weight: bold; font-size: 13px; }
-.header .head .contact-top .email > a:visited { color: #777777; }
-.header .head .contact-top .email > a:focus { color: #777777; }
+.header .head .contact-top .email > a { color: #777; font-weight: bold; font-size: 13px; }
+.header .head .contact-top .email > a:visited { color: #777; }
+.header .head .contact-top .email > a:focus { color: #777; }
 .header .head .contact-top .email > a:hover { color: #5e5e5e; }
-.header .head .contact-top .email > a:active { color: #777777; }
+.header .head .contact-top .email > a:active { color: #777; }
 .header .head .contact-top .address, .header .head .contact-top .email { text-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0; }
 .header .wrap-slider { margin: 10px 0; padding: 20px 5px; background-color: rgba(255, 255, 255, 0.3); }
 .header .wrap-slider > h1 { color: #fff; font-family: Impact, sans-serif; font-weight: normal; text-shadow: rgba(0, 0, 0, 0.2) 3px 3px 4px; max-width: 500px; margin-left: 70px; margin-top: 50px; }
@@ -52,20 +52,20 @@ body { background-image: url('/img/body_bg.png?1416006965'); background-position
 .header .wrap-slider .slider aside[id="slider-control"] .slidr-control.right, .header .wrap-slider .slider aside[id="slider-control"] .slidr-control.left { opacity: 0.4; width: 44px; height: 118px; top: 50%; margin-top: -59px; }
 .header .wrap-slider .slider aside[id="slider-control"] .slidr-control.right:hover, .header .wrap-slider .slider aside[id="slider-control"] .slidr-control.left:hover { opacity: 1; }
 .header .wrap-slider .slider aside[id="slider-control"] .slidr-control:after { border-color: transparent; }
-.header .wrap-slider .slider aside[id="slider-control"] .slidr-control.right { background: url('/img/arrow-slider-s1234166917.png') 0 -246px no-repeat; right: 0; }
-.header .wrap-slider .slider aside[id="slider-control"] .slidr-control.right:hover { background: url('/img/arrow-slider-s1234166917.png') 0 -123px no-repeat; }
-.header .wrap-slider .slider aside[id="slider-control"] .slidr-control.left { background: url('/img/arrow-slider-s1234166917.png') 0 -369px no-repeat; left: 0; }
-.header .wrap-slider .slider aside[id="slider-control"] .slidr-control.left:hover { background: url('/img/arrow-slider-s1234166917.png') 0 0 no-repeat; }
+.header .wrap-slider .slider aside[id="slider-control"] .slidr-control.right { background: url('/img/arrow-slider-s579c7d187d.png') 0 -369px no-repeat; right: 0; }
+.header .wrap-slider .slider aside[id="slider-control"] .slidr-control.right:hover { background: url('/img/arrow-slider-s579c7d187d.png') 0 -246px no-repeat; }
+.header .wrap-slider .slider aside[id="slider-control"] .slidr-control.left { background: url('/img/arrow-slider-s579c7d187d.png') 0 -123px no-repeat; left: 0; }
+.header .wrap-slider .slider aside[id="slider-control"] .slidr-control.left:hover { background: url('/img/arrow-slider-s579c7d187d.png') 0 0 no-repeat; }
 .header .wrap-slider .slider aside[id="slider-breadcrumbs"] { left: 0; }
 .header .wrap-slider .slider aside[id="slider-breadcrumbs"] .slidr-breadcrumbs { margin-bottom: 0; margin-left: 60px; }
 .header .wrap-slider .slider .slider-item { position: relative; height: 300px; margin: 0 0 0 70px; color: #fff; max-width: 500px; }
 .header .wrap-slider .slider .slider-item .h3 { margin-top: 90px; text-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0; font-size: 31.5px; }
 .header .wrap-slider .slider .slider-item .item-content { margin-top: 145px; text-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0; font-size: 17.5px; }
-.header .wrap-slider .slider .slider-item .item-content a { color: white; text-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0; }
-.header .wrap-slider .slider .slider-item .item-content a:visited { color: white; }
-.header .wrap-slider .slider .slider-item .item-content a:focus { color: white; }
+.header .wrap-slider .slider .slider-item .item-content a { color: #fff; text-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0; }
+.header .wrap-slider .slider .slider-item .item-content a:visited { color: #fff; }
+.header .wrap-slider .slider .slider-item .item-content a:focus { color: #fff; }
 .header .wrap-slider .slider .slider-item .item-content a:hover { color: #e6e6e6; }
-.header .wrap-slider .slider .slider-item .item-content a:active { color: white; }
+.header .wrap-slider .slider .slider-item .item-content a:active { color: #fff; }
 .header .wrap-slider .slider .slider-item .item-content a:hover { text-decoration: none; }
 
 .main { position: relative; margin-bottom: 40px; }
@@ -79,5 +79,5 @@ body { background-image: url('/img/body_bg.png?1416006965'); background-position
 .main .home-title blockquote { margin-bottom: 40px; }
 .main .home-title blockquote > p { color: #999; line-height: 1.5; }
 
-.footer { background-color: #EBECEC; color: #868383; font-size: 12px; /* margin: 40px 0 0; */ padding: 0; -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0 6px 8px -4px inset; -moz-box-shadow: rgba(0, 0, 0, 0.3) 0 6px 8px -4px inset; box-shadow: rgba(0, 0, 0, 0.3) 0 6px 8px -4px inset; }
+.footer { background-color: #EBECEC; color: #868383; font-size: 12px; /* margin: 40px 0 0; */ padding: 0; -moz-box-shadow: rgba(0, 0, 0, 0.3) 0 6px 8px -4px inset; -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0 6px 8px -4px inset; box-shadow: rgba(0, 0, 0, 0.3) 0 6px 8px -4px inset; }
 .footer .container { padding-top: 30px; }
