--- a/themes/bootstrap/views/site/pages/about.haml
+++ b/themes/bootstrap/views/site/pages/about.haml
@@ -9,3 +9,5 @@
 
 -$this->widget('application.components.LanguageChange', array('pickerType' => 'flags',))
 -$this->widget('application.components.LanguageChange', array('pickerType' => 'dropdown', 'class'=>'input-small flag-language'))
+-$this->widget('application.widgets.langSwitch.LangSwitchWidget')
+
