--- a/themes/bootstrap/views/layouts/main.haml
+++ b/themes/bootstrap/views/layouts/main.haml
@@ -32,7 +32,7 @@
                     'items'=>array(
                       array('label'=>Yii::t('app', 'home'), 'url'=>array('/site/index')),
                       array('label'=>Yii::t('app', 'about'), 'url'=>array('site/page', 'view'=>'about')),
-                      array('label'=>Yii::t('app', 'news'), 'url'=>array('/news/default/index')),
+                      array('label'=>Yii::t('app', 'news'), 'url'=>array('news/default/index')),
                       array('label'=>Yii::t('app', 'contact'), 'url'=>array('/site/contact')),
                       array('label'=>Yii::t('app', 'logout').' ('.Yii::app()->user->name.')', 'url'=>array('/site/logout'), 'visible'=>!Yii::app()->user->isGuest)
                     ),
@@ -57,6 +57,20 @@
                   ));
                 }
           = $content
+          :php
+            $langCode = null;
+            $url = Yii::app()->request->pathInfo;
+            $parts = explode('/', $url);
+            if (in_array($parts[0], Yii::app()->languageManager->getCodes()))
+            {
+              unset($parts[0]);
+              $url = implode($parts, '/');
+            }
+
+            var_dump($url);
+            var_dump(Yii::app()->controller);
+            //$url = Yii::app()->urlManager->removeUrlSuffix($url, '.html');
+            //var_dump(Yii::app()->urlManager->parseUrl($url));
         / content
       .layout-footer
     %footer.footer
