--- a/themes/bootstrap/views/layouts/home.haml
+++ b/themes/bootstrap/views/layouts/home.haml
@@ -20,9 +20,9 @@
                 :php
                   $this->widget('zii.widgets.CMenu',array(
                     'items'=>array(
-                      array('label'=>Yii::t('app', 'home'), 'url'=>array('site/index')),
-                      array('label'=>Yii::t('app', 'about'), 'url'=>array('site/page', 'view'=>'about')),
-                      array('label'=>Yii::t('app', 'news'), 'url'=> Yii::app()->createUrl('news/default/index')),
+                      array('label'=>Yii::t('app', 'home'), 'url'=>array('/site/index')),
+                      array('label'=>Yii::t('app', 'about'), 'url'=>array('/site/page', 'view'=>'about')),
+                      array('label'=>Yii::t('app', 'news'), 'url'=> array('/news')),
                       array('label'=>Yii::t('app', 'contact'), 'url'=>array('site/contact')),
                       array('label'=>Yii::t('app', 'logout').' ('.Yii::app()->user->name.')', 'url'=>array('site/logout'), 'visible'=>!Yii::app()->user->isGuest)
                     ),
@@ -32,7 +32,7 @@
                     ),
                   ));
                 -#$this->widget('application.components.LanguageChange', array('pickerType' => 'flags', 'class' => 'nav pull-right country',))
-                -$this->widget('application.widgets.langSwitch.LangSwitchWidget', array('class'=>'nav pull-right country'))
+                -$this->widget('application.widgets.langSwitch.LangSwitchWidget', array('url'=>$this->url, 'class'=>'nav pull-right country'))
         / navbar
         .container
           .row.head
