--- a/themes/bootstrap/views/layouts/main.haml
+++ b/themes/bootstrap/views/layouts/main.haml
@@ -32,7 +32,7 @@
                     'items'=>array(
                       array('label'=>Yii::t('app', 'home'), 'url'=>array('/site/index')),
                       array('label'=>Yii::t('app', 'about'), 'url'=>array('/site/page', 'view'=>'about')),
-                      array('label'=>Yii::t('app', 'news'), 'url'=>array('/news/default/index')),
+                      array('label'=>Yii::t('app', 'news'), 'url'=>array('/news/news/index')),
                       array('label'=>Yii::t('app', 'contact'), 'url'=>array('/site/contact')),
                       array('label'=>Yii::t('app', 'logout').' ('.Yii::app()->user->name.')', 'url'=>array('/site/logout'), 'visible'=>!Yii::app()->user->isGuest)
                     ),
