--- a/themes/bootstrap/views/layouts/main.haml
+++ b/themes/bootstrap/views/layouts/main.haml
@@ -5,7 +5,7 @@
     %meta(http-equiv="Content-Language" content="#{Yii::app()->getLanguage()}")/
     %title= $this->pageTitle
     %link{:href => "/favicon.ico", :rel => "shortcut icon"}/
-    = Yii::app()->bootstrap->registerCoreCss()
+    = Yii::app()->bootstrap->register()
     %link(rel="stylesheet" type="text/css" href=" #{Yii::app()->request->baseUrl}/css/screen.css")/
     /
       %link(rel="stylesheet" type="text/css" href=" #{Yii::app()->request->baseUrl}/css/form.css")/
