--- a/themes/bootstrap/views/layouts/column2.haml
+++ b/themes/bootstrap/views/layouts/column2.haml
@@ -1,28 +1,16 @@
 = $this->beginContent('//layouts/main')
-.row
-  .span9.offset3
-    = CHtml::tag('h1',array('class'=>'h1'),$this->pageHeader)
-.row
-  .span9.pull-right
-    .main-content#content
-      = $content
-  .span3.pull-left.left-bar.text-right
-    #sidebar
-      :php
-        $this->widget('bootstrap.widgets.TbNav', array(
-          'type' => TbHtml::NAV_TYPE_LIST,
-          'items' => array(
-            array('label' => 'Info'),
-            array('label' => 'Article', 'url' => $this->createUrl('list', array('category'=>'article'))),
-            array('label' => 'Exhibitions', 'url' => $this->createUrl('list', array('category'=>'exhibitions'))),
-            TbHtml::menuDivider(),
-            array('label' => 'all news...', 'url' => $this->createUrl('index')),
-          ),
-        ));
-
-        if(!Yii::app()->user->isGuest)
-          $this->widget('bootstrap.widgets.TbNav', array(
-            'type' => TbHtml::NAV_TYPE_LIST,
-            'items' => $this->menu,
-          ));
+.span-19
+  #content
+    = $content
+.span-5.last
+  #sidebar
+    :php
+      $this->beginWidget('zii.widgets.CPortlet', array(
+        'title'=>'Operations',
+      ));
+      $this->widget('zii.widgets.CMenu', array(
+        'items'=>$this->menu,
+        'htmlOptions'=>array('class'=>'operations'),
+      ));
+      $this->endWidget();
 = $this->endContent()
