--- a/protected/modules/news/views/layouts/column2.haml
+++ b/protected/modules/news/views/layouts/column2.haml
@@ -1,9 +1,9 @@
 = $this->beginContent('//layouts/main')
 .row-fluid
-  .span8.offset4
+  .span9.offset3
     = CHtml::tag('h1',array('class'=>'h1'),$this->pageHeader)
-.row-fluid
-  .span8.offset1.pull-right
+.row
+  .span9.pull-right
     .main-content#content
       = $content
   .span3.pull-left.left-bar.text-right
@@ -11,13 +11,7 @@
       :php
         $this->widget('bootstrap.widgets.TbNav', array(
           'type' => TbHtml::NAV_TYPE_LIST,
-          'items' => array(
-            array('label' => Yii::t('app','category')),
-            array('label' => 'Article', 'url' => $this->createUrl('list', array('category'=>'article'))),
-            array('label' => 'Exhibitions', 'url' => $this->createUrl('list', array('category'=>'exhibitions'))),
-            TbHtml::menuDivider(),
-            array('label' => 'all news...', 'url' => $this->createUrl('index')),
-          ),
+          'items' => $this->sidebar,
         ));
 
         if(!Yii::app()->user->isGuest)
