--- a/themes/bootstrap/views/layouts/main.haml
+++ b/themes/bootstrap/views/layouts/main.haml
@@ -36,6 +36,7 @@
                 'class' => 'bootstrap.widgets.TbNav',
                 'items' => array(
                   array('label'=>Yii::t('app', 'home'), 'url'=>array('/site/index')),
+                  array('label'=>Yii::t('app', 'production'), 'url'=>array('/catalog/catalog/index')),
                   array('label'=>Yii::t('app', 'about'), 'url'=>array('/site/page', 'view'=>'about')),
                   array('label'=>Yii::t('app', 'news'), 'url'=>array('/news/news/index'), 'active'=>$this->id === 'news'),
                   array('label'=>Yii::t('app', 'contact'), 'url'=>array('/site/contact')),
