--- a/protected/modules/admin/assets/css/screen.css
+++ b/protected/modules/admin/assets/css/screen.css
@@ -2,4 +2,5 @@ body {
   padding-top: 60px;
   padding-bottom: 40px; }
 
-/*# sourceMappingURL=screen.css.map */
+.page-header h1 small {
+  display: block; }
