--- a/themes/bootstrap/sass/catalog.scss
+++ b/themes/bootstrap/sass/catalog.scss
@@ -101,6 +101,12 @@
       p{
         margin-bottom: 3px;
       }
+      .name-type{
+        font-weight: bold;
+        color: #393185;
+        font-size: 1.5em;
+        margin-top: 20px;
+      }
     }
   }
 }
