--- a/themes/bootstrap/css/catalog.css
+++ b/themes/bootstrap/css/catalog.css
@@ -44,3 +44,4 @@ textarea { resize: vertical; }
 .main .main-content .group-item .nav-tabs > li > a:hover { cursor: pointer; }
 .main .left-bar .main-features-item { margin-top: 40px; }
 .main .left-bar .main-features-item p { margin-bottom: 3px; }
+.main .left-bar .main-features-item .name-type { font-weight: bold; color: #393185; font-size: 1.5em; margin-top: 20px; }
